--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <html>
     <head>
+        <!-- SEO STUFF -->
+        <title>Opalescent Cyclery</title>
+        <meta name="description" content="">
+        <meta name="robots" content="index, follow">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- STYLE -->
         <style>
             body {
                 text-align: center;
@@ -47,7 +54,7 @@
     </head>
     <body>
         <div class="logo-wrapper">
-            <img class="logo fade-in" src="opalescent-cone.png">
+            <img class="logo fade-in" src="opalescent-cone.png" alt="Opalescent Cyclery - Coming Soon! Spring/Summer 2021">
         </div>
     </body>
 </html>
