--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
             }
 
             .logo {
-                max-height: 100vh;
-                max-width: 100vw;
+                border: white 3px double;
+                margin: 30px;
+
+                max-width: calc(100vw - 72px);
+                max-height: calc(100vh - 72px);
             }
 
             /* FADE IN STUFF */
@@ -50,9 +53,19 @@
                 0% {opacity:0;}
                 100% {opacity:1;}
             }
+
+            .blurry-background {
+                background-image: url("opalescent-cone.png");
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                z-index: -10;
+                filter: blur(40px);
+            }
         </style>
     </head>
     <body>
+        <div class="blurry-background"></div>
         <div class="logo-wrapper">
             <img class="logo fade-in" src="opalescent-cone.png" alt="Opalescent Cyclery - Coming Soon! Spring/Summer 2021">
         </div>
