--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <!-- SEO STUFF -->
-        <title>Opalescent Cyclery</title>
+        <title>&#9674; Opalescent Cyclery &#9674;</title>
         <meta name="description" content="">
         <meta name="robots" content="index, follow">
         <meta name="viewport" content="width=device-width, initial-scale=1">
