--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             }
 
             .blurry-background {
-                background-image: url("opalescent-cone.png");
+                background-image: url("assets/opalescent-cone.jpg");
                 width: 100%;
                 height: 100%;
                 position: absolute;
@@ -67,7 +67,7 @@
     <body>
         <div class="blurry-background"></div>
         <div class="logo-wrapper">
-            <img class="logo fade-in" src="opalescent-cone.png" alt="Opalescent Cyclery - Coming Soon! Spring/Summer 2021">
+            <img class="logo fade-in" src="assets/opalescent-cone.jpg" alt="Opalescent Cyclery - Coming Soon! Spring/Summer 2021">
         </div>
     </body>
 </html>
