--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             }
 
             .blurry-background {
-                background-image: url("opalescent-cone.jpg");
+                background-image: url("assets/opalescent-cone.jpg");
                 width: 100%;
                 height: 100%;
                 position: absolute;
@@ -81,6 +81,6 @@
     </head>
     <body>
         <div class="blurry-background"></div>
-        <img class="logo fade-in" src="opalescent-cone.jpg" alt="Opalescent Cyclery - Coming Soon! Spring/Summer 2021">
+        <img class="logo fade-in" src="assets/opalescent-cone.jpg" alt="Opalescent Cyclery - Coming Soon! Spring/Summer 2021">
     </body>
 </html>
