Made background repeat

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
             .blurry-background {
                 background-image: url("assets/opalescent-cone.jpg");
+                background-repeat: repeat;
                 width: 100%;
                 height: 100%;
                 position: absolute;
