Added doctype & html language

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <!-- SEO STUFF -->
         <title>&#9674; Opalescent Cyclery &#9674;</title>
