--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
         <!-- STYLE -->
         <style>
             body {
+                margin: 0;
+            }
+
+            .splash-content {
                 display: flex;
                 align-items: center;
                 justify-content: center;
-
-                margin: 0;
+                height: 100vh;
             }
 
             .logo {
@@ -83,6 +86,8 @@
     </head>
     <body>
         <div class="blurry-background"></div>
-        <img class="logo fade-in" src="assets/opalescent-cone.jpg" alt="Opalescent Cyclery - Coming Soon! Spring/Summer 2021">
+        <div class="splash-content">
+            <img class="logo fade-in" src="assets/opalescent-cone.jpg" alt="Opalescent Cyclery - Coming Soon! Spring/Summer 2021">
+        </div>
     </body>
 </html>
