the image upgrade

--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@
                 <li><label for="tabset_1_contact">Contact</label></li>
                 <li><label for="tabset_1_services">Services</label></li>
                 <li><label for="tabset_1_about">About</label></li>
-                <li><label for="tabset_1_brands">Brands</label></li>
+                <!-- <li><label for="tabset_1_brands">Brands</label></li> -->
             </ul>
             <div>
         <section class="contact">
+            <img src="assets/images/phone-edit.jpg" />
             <h2>Contact</h2>
 
             <!-- Address & Google Maps Link -->
@@ -81,13 +82,18 @@
             <!-- change email after 'href="mailto:' to change what email opens  -->
             <!-- change content between > & < to change what displays -->
             <a href="mailto:shop@opalescentcyclery.com">shop@opalescentcyclery.com</a>
+
+            <a href="https://www.instagram.com/opalescentcyclery/">instagram</a>
+
+            <!-- <a href="">facebook</a> -->
         </section>
         <section class="services">
+            <img src="assets/images/stick.jpg" />
             <h2>Services</h2>
             <ul role="list">
                 <!-- Basic Tune -->
                 <li>
-                    <h3 class="margin-no-top">
+                    <h3>
                         Basic Tune
                         <span class="pull-right">
                             <sup>$</sup>85
@@ -185,7 +191,7 @@
         <section class="about">
             <h2>About</h2>
             <div class="images">
-                <img src="assets/images/dosequix.jpg" />
+                <img src="assets/images/bridge.jpg" />
             </div>
             <p>
                 Drop in off a shallow rock slab and then whip through a few tight berms. Out of the parking lot, take your first left. The turns are all smooth berms and easy to ride and not wash out. Have fun and hang on tight! So be careful with your carbon frames!
