--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- SEO STUFF -->
-    <title>&#9674; Opalescent Cyclery &#9674;</title>
+    <title>Opalescent Cyclery</title>
     <meta name="description" content="Opalescent Cyclery - Bicycle Repair - Tacoma">
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +15,6 @@
 
 <body>
     <header>
-        <!-- <img class="logo" alt="Opalescent Cyclery logo" src="./assets/Opalescent-transparent.png"> -->
         <div class="header-text">
             <h1 class="margin-none line-height">
                 Opalescent Cyclery
@@ -24,9 +23,8 @@
                 Bicycle Repair
             </h3>
         </div>
-        <!-- <img class="logo desktop-only" alt="Opalescent Cyclery logo" src="./assets/Opalescent-transparent.png"> -->
     </header>
-    <hr>
+    <hr aria-hidden="true">
     <main class="tabset">
             <input
                 type="radio"
@@ -95,8 +93,8 @@
                 <li>
                     <h3>
                         Basic Tune
-                        <span class="pull-right">
-                            <sup>$</sup>85
+                        <span class="pull-right dollars">
+                            85
                         </span>
                     </h3>
                     <ul role="list">
@@ -115,8 +113,8 @@
                 <li>
                     <h3>
                         Standard Tune
-                        <span class="pull-right">
-                            <sup>$</sup>110
+                        <span class="pull-right dollars">
+                            110
                         </span>
                     </h3>
                     <ul role="list">
@@ -133,8 +131,8 @@
                 <li>
                     <h3>
                         Full Tune
-                        <span class="pull-right">
-                            <sup>$</sup>189
+                        <span class="pull-right dollars">
+                            189
                         </span>
                     </h3>
                     <ul role="list">
@@ -150,8 +148,8 @@
                 <li>
                     <h3>
                         Complete Tune
-                        <span class="pull-right">
-                            <sup>$</sup>399+
+                        <span class="pull-right dollars">
+                            399+
                         </span>
                     </h3>
                     <ul role="list">
@@ -171,8 +169,8 @@
                 <li>
                     <h3>
                         Single Speed Tune
-                        <span class="pull-right">
-                            <sup>$</sup>65
+                        <span class="pull-right dollars">
+                            65
                         </span>
                     </h3>
                     <ul role="list">
@@ -191,14 +189,20 @@
         <section class="about">
             <h2>About</h2>
             <div class="images">
-                <img src="assets/images/bridge.jpg" />
+                <img src="assets/images/forest.jpg" />
             </div>
             <p>
                 Drop in off a shallow rock slab and then whip through a few tight berms. Out of the parking lot, take your first left. The turns are all smooth berms and easy to ride and not wash out. Have fun and hang on tight! So be careful with your carbon frames!
             </p>
+            <div class="images">
+                <img src="assets/images/mountain.jpg" />
+            </div>
             <p>
                 Logs embedded in the trail have been installed to signal technical terrain. Sadly, a better trail in this same zone (Barney Lake) is designated wilderness and is therefore 'unlawful' to ride. The climb up from Marlette Lake trail is pretty tough, but relatively short. Chewed up, lots of braking bumps, but still fun. Mostly dry with some small mud puddles.
             </p>
+            <div class="images">
+                <img src="assets/images/bridge.jpg" />
+            </div>
             <p>
                 Although it's not technical there are plenty of opportunities to slip in the loose rock and end up with some serious road rash, especially at the speeds you'll be going on the downhills! After a very quick downhill out of the gate, the route climbs up through big forest. Starts off flowy with some good jumps then gets into more technical rock gardens. Freeze-thaw cycle isn't awful, but does make this trail rather slick. Check yourself before you wreck yourself.
             </p>
