--- a/index.html
+++ b/index.html
@@ -66,6 +66,38 @@
             <img src="assets/images/phone-edit.jpg" />
             <h2>Contact</h2>
 
+            <h4 class="margin-none">Hours:</h4>
+            <ul class="hours">
+                <li>
+                    <span class="day">Monday</span>
+                    <span class="hour">closed/riding</span>
+                </li>
+                <li>
+                    <span class="day">Tuesday</span>
+                    <span class="hour">closed/riding</span>
+                </li>
+                <li>
+                    <span class="day">Wednesday</span>
+                    <span class="hour">11AM - 7PM</span>
+                </li>
+                <li>
+                    <span class="day">Thursday</span>
+                    <span class="hour">11AM - 7PM</span>
+                </li>
+                <li>
+                    <span class="day">Friday</span>
+                    <span class="hour">11AM - 7PM</span>
+                </li>
+                <li>
+                    <span class="day">Wednesday</span>
+                    <span class="hour">11AM - 5PM</span>
+                </li>
+                <li>
+                    <span class="day">Sunday</span>
+                    <span class="hour">closed/riding</span>
+                </li>
+            </ul>
+
             <!-- Address & Google Maps Link -->
             <!-- change url after 'href="' to change the link -->
             <!-- change content between > & < to change what displays -->
