--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 aria-hidden="true"
             >
             <ul hidden aria-hidden="true">
-                <li><label for="tabset_1_contact">Contact</label></li>
+                <li><label for="tabset_1_contact">Info</label></li>
                 <li><label for="tabset_1_services">Services</label></li>
                 <li><label for="tabset_1_about">About</label></li>
                 <!-- <li><label for="tabset_1_brands">Brands</label></li> -->
@@ -64,58 +64,60 @@
             <div>
         <section class="contact">
             <img src="assets/images/phone-edit.jpg" />
-            <h2>Contact</h2>
+            <h2>Info</h2>
+            <div class="content">
+                <!-- <h4 class="margin-none">Hours:</h4> -->
+                <div class="contact-info">
+                    <!-- Address & Google Maps Link -->
+                    <!-- change url after 'href="' to change the link -->
+                    <!-- change content between > & < to change what displays -->
+                    <a class="line-height" href="https://goo.gl/maps/e4TJxpiDsvC7u2636">814 6th Avenue<br />Tacoma, WA 98405</a>
 
-            <h4 class="margin-none">Hours:</h4>
-            <ul class="hours">
-                <li>
-                    <span class="day">Monday</span>
-                    <span class="hour">closed/riding</span>
-                </li>
-                <li>
-                    <span class="day">Tuesday</span>
-                    <span class="hour">closed/riding</span>
-                </li>
-                <li>
-                    <span class="day">Wednesday</span>
-                    <span class="hour">11AM - 7PM</span>
-                </li>
-                <li>
-                    <span class="day">Thursday</span>
-                    <span class="hour">11AM - 7PM</span>
-                </li>
-                <li>
-                    <span class="day">Friday</span>
-                    <span class="hour">11AM - 7PM</span>
-                </li>
-                <li>
-                    <span class="day">Wednesday</span>
-                    <span class="hour">11AM - 5PM</span>
-                </li>
-                <li>
-                    <span class="day">Sunday</span>
-                    <span class="hour">closed/riding</span>
-                </li>
-            </ul>
+                    <!-- Telephone Link -->
+                    <!-- change number after 'href="tel:' to change what number gets called  -->
+                    <!-- change content between > & < to change what displays -->
+                    <a href="tel:2537775546">(253) 777-5546</a>
 
-            <!-- Address & Google Maps Link -->
-            <!-- change url after 'href="' to change the link -->
-            <!-- change content between > & < to change what displays -->
-            <a class="line-height" href="https://goo.gl/maps/e4TJxpiDsvC7u2636">814 6th Avenue<br />Tacoma, WA 98405</a>
+                    <!-- Email Link -->
+                    <!-- change email after 'href="mailto:' to change what email opens  -->
+                    <!-- change content between > & < to change what displays -->
+                    <a href="mailto:shop@opalescentcyclery.com">shop@opalescentcyclery.com</a>
 
-            <!-- Telephone Link -->
-            <!-- change number after 'href="tel:' to change what number gets called  -->
-            <!-- change content between > & < to change what displays -->
-            <a href="tel:2537775546">(253) 777-5546</a>
+                    <a href="https://www.instagram.com/opalescentcyclery/">instagram</a>
 
-            <!-- Email Link -->
-            <!-- change email after 'href="mailto:' to change what email opens  -->
-            <!-- change content between > & < to change what displays -->
-            <a href="mailto:shop@opalescentcyclery.com">shop@opalescentcyclery.com</a>
-
-            <a href="https://www.instagram.com/opalescentcyclery/">instagram</a>
-
-            <!-- <a href="">facebook</a> -->
+                    <!-- <a href="">facebook</a> -->
+                </div>
+                <ul class="hours">
+                    <li>
+                        <span class="day">Monday</span>
+                        <span class="hour">closed</span>
+                    </li>
+                    <li>
+                        <span class="day">Tuesday</span>
+                        <span class="hour">closed</span>
+                    </li>
+                    <li>
+                        <span class="day">Wednesday</span>
+                        <span class="hour">11AM - 7PM</span>
+                    </li>
+                    <li>
+                        <span class="day">Thursday</span>
+                        <span class="hour">11AM - 7PM</span>
+                    </li>
+                    <li>
+                        <span class="day">Friday</span>
+                        <span class="hour">11AM - 7PM</span>
+                    </li>
+                    <li>
+                        <span class="day">Saturday</span>
+                        <span class="hour">11AM - 5PM</span>
+                    </li>
+                    <li>
+                        <span class="day">Sunday</span>
+                        <span class="hour">closed</span>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="services">
             <img src="assets/images/stick.jpg" />
