Made images the right size

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="preload" href="/assets/fonts/OktaNeueUltraLight/font.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/assets/fonts/OktaNeueBlackItalic/font.woff2" as="font" type="font/woff2" crossorigin>
+
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/tabset.css">
 
@@ -54,7 +57,7 @@
             <!--     INFO/CONTACT      -->
             <!-- ********************* -->
             <section class="contact">
-                <img src="assets/images/phone-edit.jpg" />
+                <img src="assets/images/phone-edit.jpg" alt="man at phone booth, calling Opalescent Cyclery"/>
                 <h2>Info</h2>
                 <div class="content">
                     <!-- <h4 class="margin-none">Hours:</h4> -->
@@ -162,7 +165,7 @@
             <!--       SERVICES        -->
             <!-- ********************* -->
             <section class="services">
-                <img src="assets/images/stick.jpg" />
+                <img src="assets/images/stick.jpg" alt="stick stuck in bike wheel"/>
                 <h2>Services</h2>
                 <ul role="list">
                     <!-- Basic Tune -->
@@ -279,7 +282,7 @@
             <section class="about">
                 <h2>About</h2>
                 <div class="images">
-                    <img src="assets/images/forest.jpg" />
+                    <img src="assets/images/forest.jpg" alt="people riding bikes through the forest" />
                 </div>
                 <p>
                     Drop in off a shallow rock slab and then whip through a few tight berms. Out of the parking lot,
@@ -287,7 +290,7 @@
                     hang on tight! So be careful with your carbon frames!
                 </p>
                 <div class="images">
-                    <img src="assets/images/mountain.jpg" />
+                    <img src="assets/images/mountain.jpg" alt="bike on gravel road in front of mountain" />
                 </div>
                 <p>
                     Logs embedded in the trail have been installed to signal technical terrain. Sadly, a better trail in
@@ -296,7 +299,7 @@
                     but still fun. Mostly dry with some small mud puddles.
                 </p>
                 <div class="images">
-                    <img src="assets/images/bridge.jpg" />
+                    <img src="assets/images/bridge.jpg" alt="man crossing a log bridge with his bike" />
                 </div>
                 <p>
                     Although it's not technical there are plenty of opportunities to slip in the loose rock and end up
