--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <!--     INFO/CONTACT      -->
             <!-- ********************* -->
             <section class="contact">
-                <img src="assets/images/phone-edit.jpg" alt="man at phone booth, calling Opalescent Cyclery"/>
+                <img src="assets/images/phone-edit.jpg" alt="man calling Opalescent Cyclery for help"/>
                 <h2>Info</h2>
                 <div class="content">
                     <!-- <h4 class="margin-none">Hours:</h4> -->
