Added logo, facebook

--- a/index.html
+++ b/index.html
@@ -89,13 +89,15 @@
                             shop@opalescentcyclery.com
                         </a>
 
+                        <!-- Instagram Link -->
                         <a href="https://www.instagram.com/opalescentcyclery/">
                             instagram
                         </a>
 
-                        <!-- <a href="">
+                        <!-- Facebook Link -->
+                        <a href="https://business.facebook.com/opalescentcyclery/">
                             facebook
-                        </a> -->
+                        </a>
                     </div>
                     <ul class="hours">
                         <!-- Monday -->
@@ -281,6 +283,7 @@
                         </ul>
                     </li>
                 </ul>
+                <!-- ADD SERVICES DISCLAIMER -->
             </section>
 
             <!-- ********************* -->
@@ -320,10 +323,12 @@
                 </p>
             </section>
         </div>
+        <div class="logo-wrapper">
+            <img class="logo" src="assets/images/logos/rainbow-logo-small.png" />
+        </div>
     </main>
     <!-- GLOWING BACKGROUND -->
     <div class="bg irridescent">
-        <!-- <img src="assets/images/opalescent.jpg" /> -->
     </div>
 </body>
 </html>
