Single top center logo

--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
 </head>
 <body>
     <header>
+        <div class="logo-wrapper top">
+            <img class="logo" src="assets/images/logos/rainbow-logo-small.png" />
+        </div>
         <div class="header-text">
-            <h1 class="margin-none line-height">
+            <!-- <h1 class="margin-none line-height">
                 Opalescent Cyclery
             </h1>
             <h3 class="margin-none">
                 Bicycle Repair
-            </h3>
+            </h3> -->
         </div>
     </header>
     <hr aria-hidden="true">
@@ -323,9 +326,9 @@
                 </p>
             </section>
         </div>
-        <div class="logo-wrapper">
+        <!-- <div class="logo-wrapper bottom">
             <img class="logo" src="assets/images/logos/rainbow-logo-small.png" />
-        </div>
+        </div> -->
     </main>
     <!-- GLOWING BACKGROUND -->
     <div class="bg irridescent">
