--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <!-- Basic Tune -->
                     <li>
                         <h3>
-                            Basic Tune
+                            Adjustments Tune
                             <span class="pull-right dollars">
                                 85
                             </span>
@@ -193,11 +193,8 @@
                             <li class="single-dash">Adjust cable tension and derailleur alignment</li>
                             <li class="single-dash">Adjust headset</li>
                             <li class="single-dash">Inspect bottom bracket</li>
-                            <li class="single-dash margin-bottom">Inflate tires</li>
-                            <li class="single-star">does include flat fix service/tubeless re-juice service</li>
-                            <li class="double-star">does not include hydraulic brake bleed</li>
-                            <li class="double-star">does not include brake pad, chain, tubeless setup and cable
-                                installation services</li>
+                            <li class="single-dash">Inflate tires</li>
+                            <li class="italic">flat fix/re-juice tubeless sealant service included with this package</li>
                         </ul>
                     </li>
 
@@ -213,11 +210,8 @@
                         <ul role="list">
                             <li class="single-dash">Everything listed in the Basic Tune</li>
                             <li class="single-dash">Lateral and vertical wheel true</li>
-                            <li class="single-dash margin-bottom">Adjust hub bearings</li>
-                            <li class="single-star">does include flat fix service/tubeless re-juice service</li>
-                            <li class="double-star">does not include hydraulic brake bleed</li>
-                            <li class="double-star">does not include brake pad, chain, tubeless setup and cable
-                                installation services</li>
+                            <li class="single-dash">Adjust hub bearings</li>
+                            <li class="italic">Chain installation service included with this package</li>
                         </ul>
                     </li>
 
@@ -232,12 +226,8 @@
                         </h3>
                         <ul role="list">
                             <li class="single-dash">Everything listed in Standard Tune</li>
-                            <li class="single-dash margin-bottom">Full removal of drivetrain components for deep clean
+                            <li class="single-dash">Full removal of drivetrain components for deep clean
                             </li>
-                            <li class="single-star">does include flat fix service/tubeless re-juice service</li>
-                            <li class="double-star">does not include hydraulic brake bleed</li>
-                            <li class="double-star">does not include brake pad, chain, tubeless setup and cable
-                                installation services</li>
                         </ul>
                     </li>
 
@@ -245,7 +235,7 @@
                     <!-- Complete Tune -->
                     <li>
                         <h3>
-                            Complete Tune
+                            Complete Overhaul
                             <span class="pull-right dollars">
                                 399+
                             </span>
@@ -253,14 +243,9 @@
                         <ul role="list">
                             <li class="single-dash">Everything listed in the Full Tune</li>
                             <li class="single-dash">Complete bike disassembly and all drivetrain parts cleaned</li>
-                            <li class="single-dash margin-bottom">Bearings replaced</li>
-                            <li class="single-star">Includes standard cable and housing</li>
-                            <li class="single-star">Includes hydraulic brake bleed and fluid</li>
-                            <li class="single-star">standard cable and housing is included</li>
-                            <li class="double-star">does include flat fix service/tubeless re-juice service</li>
-                            <li class="double-star">does not include hydraulic brake bleed</li>
-                            <li class="double-star">does not include brake pad, chain, tubeless setup and cable
-                                installation services</li>
+                            <li class="single-dash">Bearings replaced or serviced</li>
+                            <li class="italic">Includes standard cable and housing</li>
+                            <li class="italic">Includes hydraulic brake bleed and fluid</li>
                         </ul>
                     </li>
                     
@@ -278,15 +263,73 @@
                             <li class="single-dash">Torque all fasteners</li>
                             <li class="single-dash">Hubs and headset adjusted</li>
                             <li class="single-dash">Bottom bracket inspected</li>
-                            <li class="single-dash margin-bottom">Inflate tires</li>
-                            <li class="single-star">chain install and flat fix/ tubeless re-juice service included</li>
-                            <li class="double-star">does not include hydraulic brake bleed</li>
-                            <li class="double-star">does not include brake pad, chain, tubeless setup and cable
-                                installation services</li>
+                            <li class="single-dash">Inflate tires</li>
+                            <li class="italic">flat fix/re-juice tubeless sealant and chain installation service included with this package</li>
                         </ul>
                     </li>
                 </ul>
+                <p class="italic center">
+                    All additional services added to packages are discounted 20% of the listed cost
+                </p>
                 <!-- ADD SERVICES DISCLAIMER -->
+                <div class="ala-carte margin-bottom">
+                    <!-- <h2>General Services</h2> -->
+                    <h3>Tire Services</h3>
+                    <ul>
+                        <li>
+                            Standard Tube 
+                            <span class="pull-right">$15.00</span>
+                        </li>
+                        <li>
+                            Tubeless Rejuice 
+                            <span class="pull-right">$15.00</span>
+                        </li>
+                        <li>
+                            Tubeless Setup
+                            <span class="pull-right">$30.00</span>
+                        </li>
+                        <li>
+                            Internal Hub
+                            <span class="italic">includes shifting inspection</span>
+                            <span class="pull-right">$25.00</span>
+                        </li>
+                        <li>
+                            Hub Drive (E-bike) 
+                            <span class="pull-right">$45.00</span>
+                        </li>
+                    </ul>
+
+                    <h3>Brake Services</h3>
+                    <ul>
+                        <li>
+                            Brake Bleed (mineral oil)
+                            <span class="pull-right">$50.00</span>
+                        </li>
+                        <li>
+                            Brake Bleed (DOT Fluid)
+                            <span class="pull-right">$55.00</span>
+                        </li>
+                    </ul>
+
+                    <h3>Drivetrain Services</h3>
+                    <ul>
+                        <li>
+                            Chain install
+                            <span class="pull-right">$20.00</span>
+                        </li>
+                    </ul>
+
+                    <p>
+                        Don’t see the service you are looking for? Ala Carte services start at $25.00 and are charged the shop rate of
+                        $100.00/hour after the first 30 minutes. Please call for details.
+                    </p>
+                </div>
+                <div class="disclaimers">
+                    <ul>
+                        <li class="single-star">Prices reflect labor done and do not include parts or accessories </li>
+                        <li class="single-cross">Additional charges for other services and installations may apply</li>
+                    </ul>
+                </div>
             </section>
 
             <!-- ********************* -->
